iptables 254上的解释.txt
# Generated by iptables-save v1.4.14 on Wed Mar  4 17:54:00 2015
*mangle
:PREROUTING ACCEPT [3264456:1035926091]
:INPUT ACCEPT [1321222:112815292]
:FORWARD ACCEPT [1933640:921272090]
:OUTPUT ACCEPT [1297727:113929208]
:POSTROUTING ACCEPT [3231366:1035202277]
-A POSTROUTING -o ppp0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu   #把离开路由器的包的大小限制一下，省的过大会被丢弃。通过MSS的设置实现的.
COMMIT
# Completed on Wed Mar  4 17:54:00 2015
# Generated by iptables-save v1.4.14 on Wed Mar  4 17:54:00 2015
*filter
:INPUT ACCEPT [1321223:112815344]
:FORWARD ACCEPT [1933642:921275074]
:OUTPUT ACCEPT [1297715:113928202]
-A INPUT -s 10.0.0.0/8 -i ppp0,wan1 -j DROP               #DROP掉使用10.0.0.0/8类地址通过ppp0，wan1进入254服务器
-A INPUT -s 127.0.0.0/8 -i ppp0,wan1 -j DROP              #DROP掉使用127.0.0.0/8类地址通过ppp0，wan1进入254服务器
-A INPUT -s 172.16.0.0/12 -i ppp0,wan1 -j DROP            #DROP掉使用172.16.0.0/12类地址通过ppp0，wan1进入254服务器
-A INPUT -s 192.168.0.0/16 -i ppp0,wan1 -j DROP           #DROP掉使用192.168.0.0/16类地址通过ppp0，wan1进入254服务器
-A INPUT -i ppp0,wan1 -p tcp -m tcp --dport 8833 -j DROP  #DROP掉访问目标端口为8833通过ppp0，wan1进入254服务器
-A INPUT -i ppp0,wan1 -p tcp -m tcp --dport 3000 -j DROP
-A INPUT -i ppp0,wan1 -p tcp -m tcp --dport 445 -j DROP
-A INPUT -d 58.64.146.214  -p tcp -m tcp --dport 8833 -j DROP   #DROP掉访问目标端口为8833，目标地址为58.64.146.214进入254服务器
COMMIT
# Completed on Wed Mar  4 17:54:00 2015
# Generated by iptables-save v1.4.14 on Wed Mar  4 17:54:00 2015
*nat
:PREROUTING ACCEPT [42796:3343869]
:INPUT ACCEPT [4818:313804]
:OUTPUT ACCEPT [2496:181045]
:POSTROUTING ACCEPT [5114:345507]
-A PREROUTING -d 58.64.146.214/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.4.1:443      #通过目标地址为58.64.146.214的机器，port口为443的转发到192.168.4.1：443的内网主机中
-A POSTROUTING -s 192.168.0.0/16 ! -d 192.168.0.0/16 -j MASQUERADE                                        #对于源地址192.168.0.0/16 目标地址不是192.168.0.0/16的 进行转换
-A POSTROUTING -s 10.8.0.0/24 ! -d 192.168.0.0/16 -j MASQUERADE                                           #对于源地址10.8.0.0/24 目标地址不是192.168.0.0/16的 进行转换
-A POSTROUTING -s 10.8.1.0/24 ! -d 192.168.0.0/16 -j MASQUERADE                                           #对于源地址10.8.1.0/24  目标地址不是192.168.0.0/16的 进行转换
COMMIT
# Completed on Wed Mar  4 17:54:00 2015
